--- a/index.html
+++ b/index.html
@@ -1,22 +1,34 @@
-<h1>SuperCross Manager 26</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>SuperCross Manager 26</title>
+</head>
+<body>
 
-<button onclick="startRace()">🏁 Simulate Race</button>
+  <h1>SuperCross Manager 26</h1>
 
-<h2>League Control Panel</h2>
+  <button onclick="startRace()">🏁 Simulate Race</button>
 
-<div id="league-stats">
-  💰 Money: $<span id="money">1000000</span><br>
-  📣 Popularity: <span id="popularity">50</span>%
-</div>
+  <h2>League Control Panel</h2>
 
-<button onclick="runAds()">📺 Run Ads ($100k)</button>
-<button onclick="hostEvent()">🎉 Host Special Event ($200k)</button>
-<button onclick="improveSafety()">🦺 Improve Safety ($150k)</button>
-<button onclick="allowDrama()">🔥 Allow More Drama (Free)</button>
+  <div id="league-stats">
+    💰 Money: $<span id="money">1000000</span><br>
+    📣 Popularity: <span id="popularity">50</span>%
+  </div>
 
-<h2>Race Output</h2>
-<div id="output"></div>
+  <br>
 
-<script src="src/raceSim.js"></script>
-<script src="src/game.js"></script>
-``
+  <button onclick="runAds()">📺 Run Ads ($100k)</button>
+  <button onclick="hostEvent()">🎉 Host Special Event ($200k)</button>
+  <button onclick="improveSafety()">🦺 Improve Safety ($150k)</button>
+  <button onclick="allowDrama()">🔥 Allow Drama</button>
+
+  <h2>Output</h2>
+  <div id="output"></div>
+
+  <script src="src/raceSim.js"></script>
+  <script src="src/game.js"></script>
+
+</body>
+</html>
