--- a/index.html
+++ b/index.html
@@ -1,34 +1,50 @@
-<h1>SuperCross Manager 26</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>SuperCross Manager 26</title>
+  <link rel="stylesheet" href="src/style.css">
+</head>
+<body>
 
-<div class="panel">
+<h1>🏁 SuperCross Manager 26</h1>
+
+<div class="panel stats">
+  <h2>League Stats</h2>
   💰 Money: $<span id="money">1000000</span><br>
-  📣 Popularity: <span id="popularity">50</span>%
+  📣 Popularity: <span id="popularity">50</span>%<br>
+  🏟 Seats filled: <span id="seatsFilled">0</span>/<span id="maxSeats">1000</span>
 </div>
 
-<div class="panel">
+<div class="panel actions">
   <h2>League Actions</h2>
   <button onclick="startRace()">🏁 Simulate Race</button>
   <button onclick="runAds()">📺 Run Ads</button>
   <button onclick="hostEvent()">🎉 Host Event</button>
   <button onclick="improveSafety()">🦺 Improve Safety</button>
   <button onclick="allowDrama()">🔥 Encourage Drama</button>
-  <button onclick="signSponsor()">🤝 Sign Sponsor</button>
+  <button onclick="chooseSponsor()">🤝 Sign Sponsor</button>
+  <button onclick="upgradeStadium()">⬆ Upgrade Stadium</button>
 </div>
 
-<div class="panel">
+<div class="panel output">
   <h2>League Output</h2>
   <div id="output">Waiting for decision...</div>
+  <div id="sponsorOutput">No active sponsor</div>
 </div>
 
-<!-- RACE POPUP -->
+<!-- Race popup modal -->
 <div id="raceModal" class="modal">
   <div class="modal-content">
     <span class="close-btn" onclick="closeRace()">X</span>
     <h2>Post-Race Review</h2>
     <div id="raceText"></div>
+    <div id="penaltyOptions"></div>
   </div>
 </div>
 
-<link rel="stylesheet" href="src/style.css">
 <script src="src/raceSim.js"></script>
 <script src="src/game.js"></script>
+
+</body>
+</html>
