--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <button onclick="hostEvent()">🎉 Host Event</button>
   <button onclick="improveSafety()">🦺 Improve Safety</button>
   <button onclick="allowDrama()">🔥 Encourage Drama</button>
-  <button onclick="chooseSponsor()">🤝 Sign Sponsor</button>
+  <button onclick="showSponsorChoices()">🤝 Choose Sponsor</button>
   <button onclick="upgradeStadium()">⬆ Upgrade Stadium</button>
 </div>
 
@@ -43,8 +43,9 @@
   </div>
 </div>
 
-<script src="src/raceSim.js"></script>
 <script src="src/game.js"></script>
+<script src="src/raceSim.js"></script>
 
 </body>
 </html>
+
