--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
   <h2>League Stats</h2>
   💰 Money: $<span id="money">1000000</span><br>
   📣 Popularity: <span id="popularity">50</span>%<br>
-  🏟 Seats filled: <span id="seatsFilled">0</span>/<span id="maxSeats">1000</span>
+  🏟 Seats filled: <span id="seatsFilled">0</span>/<span id="maxSeats">1000</span><br>
+  🏆 Season Points: <span id="seasonPoints">0</span>
 </div>
 
 <div class="panel actions">
@@ -25,27 +26,12 @@
   <button onclick="allowDrama()">🔥 Encourage Drama</button>
   <button onclick="showSponsorChoices()">🤝 Choose Sponsor</button>
   <button onclick="upgradeStadium()">⬆ Upgrade Stadium</button>
+  <button onclick="trainRiders()">💪 Train Riders</button>
 </div>
 
 <div class="panel output">
   <h2>League Output</h2>
   <div id="output">Waiting for decision...</div>
-  <div id="sponsorOutput">No active sponsor</div>
-</div>
+  <div id="sponsorOutput">No active sp
 
-<!-- Race popup modal -->
-<div id="raceModal" class="modal">
-  <div class="modal-content">
-    <span class="close-btn" onclick="closeRace()">X</span>
-    <h2>Post-Race Review</h2>
-    <div id="raceText"></div>
-    <div id="penaltyOptions"></div>
-  </div>
-</div>
-
-<script src="src/game.js"></script>
-<script src="src/raceSim.js"></script>
-
-</body>
-</html>
 
