--- a/index.html
+++ b/index.html
@@ -7,31 +7,54 @@
 </head>
 <body>
 
-<h1>🏁 SuperCross Manager 26</h1>
+  <h1>🏁 SuperCross Manager 26</h1>
 
-<div class="panel stats">
-  <h2>League Stats</h2>
-  💰 Money: $<span id="money">1000000</span><br>
-  📣 Popularity: <span id="popularity">50</span>%<br>
-  🏟 Seats filled: <span id="seatsFilled">0</span>/<span id="maxSeats">1000</span><br>
-  🏆 Season Points: <span id="seasonPoints">0</span>
-</div>
+  <!-- Stats Panel -->
+  <div class="panel stats">
+    <h2>League Stats</h2>
+    💰 Money: $<span id="money">1000000</span><br>
+    📣 Popularity: <span id="popularity">50</span>%<br>
+    🏟 Seats filled: <span id="seatsFilled">0</span>/<span id="maxSeats">1000</span><br>
+    🏆 Season Points: <span id="seasonPoints">0</span>
+  </div>
 
-<div class="panel actions">
-  <h2>League Actions</h2>
-  <button onclick="startRace()">🏁 Simulate Race</button>
-  <button onclick="runAds()">📺 Run Ads</button>
-  <button onclick="hostEvent()">🎉 Host Event</button>
-  <button onclick="improveSafety()">🦺 Improve Safety</button>
-  <button onclick="allowDrama()">🔥 Encourage Drama</button>
-  <button onclick="showSponsorChoices()">🤝 Choose Sponsor</button>
-  <button onclick="upgradeStadium()">⬆ Upgrade Stadium</button>
-  <button onclick="trainRiders()">💪 Train Riders</button>
-</div>
+  <!-- Actions Panel -->
+  <div class="panel actions">
+    <h2>League Actions</h2>
+    <button onclick="startRace()">🏁 Simulate Race</button>
+    <button onclick="runAds()">📺 Run Ads</button>
+    <button onclick="hostEvent()">🎉 Host Event</button>
+    <button onclick="improveSafety()">🦺 Improve Safety</button>
+    <button onclick="allowDrama()">🔥 Encourage Drama</button>
+    <button onclick="showSponsorChoices()">🤝 Choose Sponsor</button>
+    <button onclick="upgradeStadium()">⬆ Upgrade Stadium</button>
+    <button onclick="trainRiders()">💪 Train Riders</button>
+  </div>
 
-<div class="panel output">
-  <h2>League Output</h2>
-  <div id="output">Waiting for decision...</div>
-  <div id="sponsorOutput">No active sp
+  <!-- Output Panel -->
+  <div class="panel output">
+    <h2>League Output</h2>
+    <div id="output">Waiting for decision...</div>
+    <div id="sponsorOutput">No active sponsor</div>
+  </div>
+
+  <!-- Race Modal -->
+  <div id="raceModal" class="modal">
+    <div class="modal-content">
+      <span class="close-btn" onclick="closeRace()">X</span>
+      <h2>Post-Race Review</h2>
+      <div id="raceText"></div>
+      <div id="penaltyOptions"></div>
+    </div>
+  </div>
+
+  <!-- Scripts -->
+  <!-- Load raceSim first, then game.js -->
+  <script src="src/raceSim.js"></script>
+  <script src="src/game.js"></script>
+
+</body>
+</html>
+
 
 
